// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register API POST /register do not register user (email already exist) 1`] = `
Object {
  "body": Object {
    "help": "Sorry nickname already taken.",
    "message": "Nickname already taken",
  },
  "status": 400,
}
`;

exports[`Register API POST /register do not register user (validationFail) 1`] = `
Object {
  "body": Object {
    "help": "email should be string",
    "message": "email should be string",
  },
  "status": 400,
}
`;

exports[`Register API POST /register do register user 1`] = `
Object {
  "body": Object {},
  "status": 200,
}
`;
